# valo-member-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml  format.yaml  test.yaml
src/: bot.rs  config.rs  dotenv_handler.rs  error.rs  handler.rs  main.rs  state_handler.rs  valkey.rs  worker.rs
src/bot/: buttons.rs  panels.rs  questions.rs  types.rs
src/bot/buttons/: delete.rs  join.rs  leave.rs
src/bot/panels/: delete.rs  edit.rs  entry.rs  send.rs
src/bot/questions/: member.rs  message.rs  mode.rs  rank.rs  server.rs
src/handler/: colors.rs  pin.rs  question.rs  questions.rs  state.rs  webhook.rs  webhook_buttons.rs  webhook_buttons_handler.rs  webhook_edit.rs  webhook_send.rs
src/handler/questions/: component_handler.rs  component_store.rs  match_select.rs  member_select.rs  mode_select.rs  rank_select.rs  recruit_message.rs  server_select.rs
src/handler/webhook/: buttons_handler.rs  create.rs  edit.rs  handler.rs  send.rs
