[package]
name = "valo-member-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
once_cell = "1.21.3"
redis = { version = "0.32.2", features = ["tokio-comp", "aio", "connection-manager"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "http", "builder", "model"] }
tokio = { version = "1.45.1" , features = ["macros", "rt-multi-thread"] }
