[package]
name = "valo-member-bot"
version = "2025.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
dashmap = "6.1.0"
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
futures = "0.3.31"
redis = { version = "0.32.2", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
serenity = { version = "0.12.4", features = [
    "client",
    "gateway",
    "http",
    "builder",
    "model",
] }
smallvec = "1.15.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread"
] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
